SERVER-78596 SBE $project aggregation $sqrt: {NaN} asserts but should return NaN